@@ -1,20 +1,21 @@
 package org.apereo.cas.adaptors.x509.authentication.revocation.checker;
 
-
-import net.sf.ehcache.Cache;
-import net.sf.ehcache.Element;
 import org.apereo.cas.adaptors.x509.authentication.CRLFetcher;
 import org.apereo.cas.adaptors.x509.authentication.ResourceCRLFetcher;
 import org.apereo.cas.adaptors.x509.authentication.revocation.policy.RevocationPolicy;
-import org.apereo.cas.util.crypto.CertUtils;
 import org.apereo.cas.util.CollectionUtils;
+import org.apereo.cas.util.crypto.CertUtils;
+
+import lombok.SneakyThrows;
+import lombok.extern.slf4j.Slf4j;
+import lombok.val;
+import net.sf.ehcache.Cache;
+import net.sf.ehcache.Element;
 import org.bouncycastle.asn1.ASN1Sequence;
 import org.bouncycastle.asn1.DERIA5String;
 import org.bouncycastle.asn1.x509.DistributionPoint;
 import org.bouncycastle.asn1.x509.GeneralName;
 import org.cryptacular.x509.ExtensionReader;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.core.io.ByteArrayResource;
 
 import java.net.MalformedURLException;
@@ -41,9 +42,9 @@ import java.util.stream.IntStream;
  * @author Marvin S. Addison
  * @since 3.4.6
  */
+@Slf4j
 public class CRLDistributionPointRevocationChecker extends AbstractCRLRevocationChecker {
-    private static final Logger LOGGER = LoggerFactory.getLogger(CRLDistributionPointRevocationChecker.class);
-    
+
     private final Cache crlCache;
     private final CRLFetcher fetcher;
     private final boolean throwOnFetchFailure;
@@ -75,7 +76,7 @@ public class CRLDistributionPointRevocationChecker extends AbstractCRLRevocation
      * @param throwOnFetchFailure the throw on fetch failure
      */
     public CRLDistributionPointRevocationChecker(
-            final Cache crlCache, final CRLFetcher fetcher, final boolean throwOnFetchFailure) {
+        final Cache crlCache, final CRLFetcher fetcher, final boolean throwOnFetchFailure) {
         this(false, null, null, crlCache, fetcher, throwOnFetchFailure);
     }
 
@@ -96,7 +97,7 @@ public class CRLDistributionPointRevocationChecker extends AbstractCRLRevocation
                                                  final boolean throwOnFetchFailure) {
         this(false, unavailableCRLPolicy, expiredCRLPolicy, crlCache, new ResourceCRLFetcher(), throwOnFetchFailure);
     }
-    
+
     public CRLDistributionPointRevocationChecker(final boolean checkAll, final RevocationPolicy<Void> unavailableCRLPolicy,
                                                  final RevocationPolicy<X509CRL> expiredCRLPolicy, final Cache crlCache,
                                                  final CRLFetcher fetcher, final boolean throwOnFetchFailure) {
@@ -106,90 +107,6 @@ public class CRLDistributionPointRevocationChecker extends AbstractCRLRevocation
         this.throwOnFetchFailure = throwOnFetchFailure;
     }
 
-    @Override
-    protected List<X509CRL> getCRLs(final X509Certificate cert) {
-
-        if (this.crlCache == null) {
-            throw new IllegalArgumentException("CRL cache is not defined");
-        }
-        if (this.fetcher == null) {
-            throw new IllegalArgumentException("CRL fetcher is not defined");
-        }
-        if (getExpiredCRLPolicy() == null) {
-            throw new IllegalArgumentException("Expiration CRL policy is not defined");
-        }
-        if (getUnavailableCRLPolicy() == null) {
-            throw new IllegalArgumentException("Unavailable CRL policy is not defined");
-        }
-
-        final URI[] urls = getDistributionPoints(cert);
-        LOGGER.debug("Distribution points for [{}]: [{}].", CertUtils.toString(cert), CollectionUtils.wrap(urls));
-        final List<X509CRL> listOfLocations = new ArrayList<>(urls.length);
-        boolean stopFetching = false;
-
-        try {
-            for (int index = 0; !stopFetching && index < urls.length; index++) {
-                final URI url = urls[index];
-                final Element item = this.crlCache.get(url);
-
-                if (item != null) {
-                    LOGGER.debug("Found CRL in cache for [{}]", CertUtils.toString(cert));
-                    final byte[] encodedCrl = (byte[]) item.getObjectValue();
-                    final X509CRL crlFetched = this.fetcher.fetch(new ByteArrayResource(encodedCrl));
-
-                    if (crlFetched != null) {
-                        listOfLocations.add(crlFetched);
-                    } else {
-                        LOGGER.warn("Could fetch X509 CRL for [{}]. Returned value is null", url);
-                    }
-                } else {
-                    LOGGER.debug("CRL for [{}] is not cached. Fetching and caching...", CertUtils.toString(cert));
-                    try {
-                        final X509CRL crl = this.fetcher.fetch(url);
-                        if (crl != null) {
-                            LOGGER.info("Success. Caching fetched CRL at [{}].", url);
-                            addCRL(url, crl);
-                            listOfLocations.add(crl);
-                        }
-                    } catch (final Exception e) {
-                        LOGGER.error("Error fetching CRL at [{}]", url, e);
-                        if (this.throwOnFetchFailure) {
-                            throw new RuntimeException(e.getMessage(), e);
-                        }
-                    }
-                }
-
-                if (!this.checkAll && !listOfLocations.isEmpty()) {
-                    LOGGER.debug("CRL fetching is configured to not check all locations.");
-                    stopFetching = true;
-                }
-            }
-        } catch (final Exception e) {
-            throw new RuntimeException(e.getMessage(), e);
-        }
-
-        LOGGER.debug("Found [{}] CRLs", listOfLocations.size());
-        return listOfLocations;
-    }
-
-    @Override
-    protected boolean addCRL(final Object id, final X509CRL crl) {
-        try {
-            if (crl == null) {
-                LOGGER.debug("No CRL was passed. Removing [{}] from cache...", id);
-                return this.crlCache.remove(id);
-            }
-
-            this.crlCache.put(new Element(id, crl.getEncoded()));
-            return this.crlCache.get(id) != null;
-
-        } catch (final Exception e) {
-            LOGGER.warn("Failed to add the crl entry [{}] to the cache", crl);
-            throw new RuntimeException(e.getMessage(), e);
-        }
-    }
-
-
     /**
      * Gets the distribution points.
      *
@@ -197,31 +114,27 @@ public class CRLDistributionPointRevocationChecker extends AbstractCRLRevocation
      * @return the url distribution points
      */
     private static URI[] getDistributionPoints(final X509Certificate cert) {
-        final List<DistributionPoint> points;
         try {
-            points = new ExtensionReader(cert).readCRLDistributionPoints();
+            val points = new ExtensionReader(cert).readCRLDistributionPoints();
+            val urls = new ArrayList<URI>();
+            if (points != null) {
+                points.stream().map(DistributionPoint::getDistributionPoint).filter(Objects::nonNull).forEach(pointName -> {
+                    val nameSequence = ASN1Sequence.getInstance(pointName.getName());
+                    IntStream.range(0, nameSequence.size()).mapToObj(i -> GeneralName.getInstance(nameSequence.getObjectAt(i))).forEach(name -> {
+                        LOGGER.debug("Found CRL distribution point [{}].", name);
+                        try {
+                            addURL(urls, DERIA5String.getInstance(name.getName()).getString());
+                        } catch (final Exception e) {
+                            LOGGER.warn("[{}] not supported. String or GeneralNameList expected.", pointName);
+                        }
+                    });
+                });
+            }
+            return urls.toArray(new URI[0]);
         } catch (final Exception e) {
             LOGGER.error("Error reading CRLDistributionPoints extension field on [{}]", CertUtils.toString(cert), e);
             return new URI[0];
         }
-
-        final List<URI> urls = new ArrayList<>();
-
-        if (points != null) {
-            points.stream().map(DistributionPoint::getDistributionPoint).filter(Objects::nonNull).forEach(pointName -> {
-                final ASN1Sequence nameSequence = ASN1Sequence.getInstance(pointName.getName());
-                IntStream.range(0, nameSequence.size()).mapToObj(i -> GeneralName.getInstance(nameSequence.getObjectAt(i))).forEach(name -> {
-                    LOGGER.debug("Found CRL distribution point [{}].", name);
-                    try {
-                        addURL(urls, DERIA5String.getInstance(name.getName()).getString());
-                    } catch (final Exception e) {
-                        LOGGER.warn("[{}] not supported. String or GeneralNameList expected.", pointName);
-                    }
-                });
-            });
-        }
-
-        return urls.toArray(new URI[urls.size()]);
     }
 
     /**
@@ -237,18 +150,77 @@ public class CRLDistributionPointRevocationChecker extends AbstractCRLRevocation
      */
     private static void addURL(final List<URI> list, final String uriString) {
         try {
-            URI uri;
             try {
-                final URL url = new URL(URLDecoder.decode(uriString, StandardCharsets.UTF_8.name()));
-                uri = new URI(url.getProtocol(), url.getAuthority(), url.getPath(), url.getQuery(), null);
+                val url = new URL(URLDecoder.decode(uriString, StandardCharsets.UTF_8.name()));
+                list.add(new URI(url.getProtocol(), url.getAuthority(), url.getPath(), url.getQuery(), null));
             } catch (final MalformedURLException e) {
-                uri = new URI(uriString);
+                list.add(new URI(uriString));
             }
-            list.add(uri);
         } catch (final Exception e) {
             LOGGER.warn("[{}] is not a valid distribution point URI.", uriString);
         }
     }
 
+    @Override
+    @SneakyThrows
+    protected List<X509CRL> getCRLs(final X509Certificate cert) {
+        val urls = getDistributionPoints(cert);
+        LOGGER.debug("Distribution points for [{}]: [{}].", CertUtils.toString(cert), CollectionUtils.wrap(urls));
+        val listOfLocations = new ArrayList<X509CRL>(urls.length);
+        var stopFetching = false;
 
+        for (var index = 0; !stopFetching && index < urls.length; index++) {
+            val url = urls[index];
+            val item = this.crlCache.get(url);
+
+            if (item != null) {
+                LOGGER.debug("Found CRL in cache for [{}]", CertUtils.toString(cert));
+                val encodedCrl = (byte[]) item.getObjectValue();
+                val crlFetched = this.fetcher.fetch(new ByteArrayResource(encodedCrl));
+
+                if (crlFetched != null) {
+                    listOfLocations.add(crlFetched);
+                } else {
+                    LOGGER.warn("Could fetch X509 CRL for [{}]. Returned value is null", url);
+                }
+            } else {
+                LOGGER.debug("CRL for [{}] is not cached. Fetching and caching...", CertUtils.toString(cert));
+                try {
+                    val crl = this.fetcher.fetch(url);
+                    if (crl != null) {
+                        LOGGER.info("Success. Caching fetched CRL at [{}].", url);
+                        addCRL(url, crl);
+                        listOfLocations.add(crl);
+                    }
+                } catch (final Exception e) {
+                    LOGGER.error("Error fetching CRL at [{}]", url, e);
+                    if (this.throwOnFetchFailure) {
+                        throw new RuntimeException(e.getMessage(), e);
+                    }
+                }
+            }
+
+            if (!this.checkAll && !listOfLocations.isEmpty()) {
+                LOGGER.debug("CRL fetching is configured to not check all locations.");
+                stopFetching = true;
+            }
+
+        }
+
+        LOGGER.debug("Found [{}] CRLs", listOfLocations.size());
+        return listOfLocations;
+    }
+
+    @Override
+    @SneakyThrows
+    protected boolean addCRL(final Object id, final X509CRL crl) {
+        if (crl == null) {
+            LOGGER.debug("No CRL was passed. Removing [{}] from cache...", id);
+            return this.crlCache.remove(id);
+        }
+
+        this.crlCache.put(new Element(id, crl.getEncoded()));
+        return this.crlCache.get(id) != null;
+
+    }
 }
